<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.yadli.yadlisettings.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- GROUP START-->
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/intellithermal_standby_freq" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">

                <SeekBar
                    android:layout_width="278dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarStandbyFreq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0Mhz"
                    android:id="@+id/textViewStandbyFreq"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_standby_min_little_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_standby_min_little_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_standby_max_little_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_standby_max_little_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_standby_min_big_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_standby_min_big_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_standby_max_big_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_standby_max_big_core"
                    />

            </RelativeLayout>
            <!-- GROUP END-->

            <!-- GROUP START-->
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/intellithermal_normal_freq" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">

                <SeekBar
                    android:layout_width="278dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarNormalFreq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0Mhz"
                    android:id="@+id/textViewNormalFreq"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_normal_min_little_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_normal_min_little_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_normal_max_little_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_normal_max_little_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_normal_min_big_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_normal_min_big_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_normal_max_big_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_normal_max_big_core"
                    />

            </RelativeLayout>
            <!-- GROUP END-->

            <!-- GROUP START-->
            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/intellithermal_performance_freq" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">

                <SeekBar
                    android:layout_width="278dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBarPerformanceFreq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="0Mhz"
                    android:id="@+id/textViewPerformanceFreq"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_performance_min_little_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_performance_min_little_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_performance_max_little_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_performance_max_little_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_performance_min_big_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_performance_min_big_core"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">


                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/intellithermal_performance_max_big_core" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:id="@+id/numberPicker_performance_max_big_core"
                    />

            </RelativeLayout>
            <!-- GROUP END-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/nightshift_toggle" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch1"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/nightshift_start" />

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nightshift_start_picker"/>

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/nightshift_end" />

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nightshift_end_picker"/>

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/nightshift_restore" />

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nightshift_restore_picker"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
